@@ -40,7 +40,14 @@
 #include "ptexlib.h"
 
 #include "png.h"
+#ifdef POPPLER_VERSION
+#define xpdfString "poppler"
+#define xpdfVersion POPPLER_VERSION
+#include "poppler-config.h"
+#else
+#define xpdfString "xpdf"
 #include "xpdf/config.h"        /* just to get the xpdf version */
+#endif
 
 static const char __svn_version[] =
     "$Id$ "
@@ -1125,9 +1132,9 @@ void initversionstring(char **versions)
     (void) asprintf(versions,
                     "Compiled with libpng %s; using libpng %s\n"
                     "Compiled with zlib %s; using zlib %s\n"
-                    "Compiled with xpdf version %s\n",
+                    "Compiled with %s version %s\n",
                     PNG_LIBPNG_VER_STRING, png_libpng_ver,
-                    ZLIB_VERSION, zlib_version, xpdfVersion);
+                    ZLIB_VERSION, zlib_version, xpdfString, xpdfVersion);
 }
 
 /*************************************************/
